# koe

./: .gitignore  README.en.md  README.md  build.bat  test_ocr.py
client/: index.html  package-lock.json  package.json  test-index.html  vite.config.ts
client/src/: App.vue  main.ts  style.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/.cargo/: config.toml
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: acp_client.rs  acp_runtime.rs  bubble.rs  chat_history.rs  config.rs  copilot.rs  file_handler.rs  file_history.rs  lib.rs  main.rs  notify.rs  overlay.rs  protocol.rs  signal_emitter.rs  tool_executor.rs  tray.rs  uia_tree.rs  ws_client.rs  ws_runtime.rs
client/src-tauri/src/tools/: clipboard.rs  file_info.rs  file_search.rs  foreground_window.rs  grep_file.rs  input.rs  input.rs.bak  kill_process.rs  list_dir.rs  list_windows.rs  mod.rs  ocr.rs  open_path.rs  path_guard.rs  pull_file.rs  read_file.rs  run_command.rs  screenshot.rs  start_process.rs  system_info.rs  uia_tree.rs  write_clipboard.rs  write_file.rs
client/src/components/: AppLayout.vue  ChatInput.vue  ChatMessage.vue  CopilotOverlay.vue  Sidebar.vue  StatusIndicator.vue
client/src/lib/: markdown.ts  tauri.ts  types.ts  ws-client.ts
client/src/stores/: app.ts  chat.spec.ts  chat.ts  file.spec.ts  file.ts
client/src/views/: BubblePage.vue  CapabilitiesPage.vue  ChatPage.vue  CopilotOverlayWindow.vue  FileTransferPage.vue  FloatPage.vue  HomePage.vue  QuickChat.vue  SettingsPage.vue  ToolCallOverlay.vue
client/test-dist/: index.html
client/tests/: bubble-markdown-rendering.test.mjs  copilot-overlay-window.test.mjs
docs/: kaya-vision-agent-plan.md  protocol.md
docs/superpowers/plans/: 2026-06-06-file-transfer-hub.md  2026-06-08-client-vue3-migration.md  2026-06-08-kaya-beam-acp-chat.md  2026-06-08-kaya-beam-frontend-redesign.md  2026-06-08-kaya-beam-remote-mcp-phase1.md  2026-06-09-kaya-beam-acp-bridge-removal.md  2026-06-10-koe-file-read-write-tools.md  2026-06-11-bubble-markdown-rendering.md  2026-06-11-tauri-lib-protocol.md  2026-06-12-client-local-history.md  2026-06-12-streaming-file-transfer.md
docs/superpowers/specs/: 2026-06-06-file-transfer-hub-design.md  2026-06-08-client-vue3-migration-design.md  2026-06-08-kaya-beam-acp-chat-design.md  2026-06-08-kaya-beam-frontend-redesign.md  2026-06-08-kaya-beam-remote-mcp-design.md  2026-06-09-kaya-beam-acp-bridge-removal-design.md  2026-06-10-koe-client-context-and-tool-extensibility-design.md  2026-06-10-koe-file-read-write-tools-design.md  2026-06-11-bubble-markdown-rendering-design.md  (+2 more)
server/: pyproject.toml  run_and_send.py
server/src/kaya_server/: acp_bridge.py  auth.py  connection_manager.py  constants.py  db.py  models.py  signal_handlers.py  signal_registry.py  ws_handler.py
server/src/kaya_transfer_hub/: __init__.py  __main__.py  cli.py  mcp_agent.py  server.py  tool_defs.py  tool_registry.py
server/tests/: test_auth.py  test_connection_manager.py  test_db.py  test_import_path.py  test_server.py  test_signal_registry.py  test_tool_registry.py  test_ws_handler.py
test_ocr_rs/: Cargo.toml
test_ocr_rs/src/: main.rs
