[project]
name = "kaya-transfer-hub"
version = "0.1.0"
description = "MCP file transfer server for LLM-to-client file pushing"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "websockets>=12.0",
    "bcrypt>=4.0",
    "click>=8.0",
]

[project.scripts]
kaya-transfer-hub = "kaya_transfer_hub.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"
