[package]
name = "kaya-transfer-hub-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "kaya_transfer_hub_client_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
url = "2"
chrono = "0.4"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
open = "5"
futures-util = "0.3"
screenshots = "0.8"
arboard = "3"
async-trait = "0.1"
walkdir = "2"
encoding_rs = "0.8"
regex = "1"
windows = { version = "0.58", features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Storage",
    "Foundation",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
]}
